<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    tools:ignore="SpeakableTextPresentCheck">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">
<!--        Place for an image from Picasso-->
            <ImageView
                android:translationZ="0dp"
                android:id="@+id/imagePicasso"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                tools:targetApi="lollipop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:layout_marginTop="4dp"
                android:background="@color/text_background"
                android:text="@string/image_from_picasso"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:translationZ="1dp"
                tools:targetApi="lollipop" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">
            <!--        Place for an image from Glide-->

            <ImageView
                android:translationZ="0dp"
                android:id="@+id/imageGlide"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                tools:targetApi="lollipop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:layout_marginTop="4dp"
                android:background="@color/text_background"
                android:text="@string/image_from_glide"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:translationZ="1dp"
                tools:targetApi="lollipop" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">
            <!--        Place for an image from Fresco-->

<!--            do not use imageView-->
            <com.facebook.drawee.view.SimpleDraweeView
                android:translationZ="0dp"
                android:id="@+id/imageFresco"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                tools:targetApi="lollipop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:layout_marginTop="4dp"
                android:background="@color/text_background"
                android:text="@string/image_from_fresco"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:translationZ="1dp"
                tools:targetApi="lollipop" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/petemoss"
            android:text="@string/petemoss_font_family"
            android:textColor="@color/petemoss_font_color"
            android:textSize="50sp"
            android:textStyle="bold" />

        <!--        Progress Bar    -->
        <ProgressBar
            android:id="@+id/progress_circular"
            android:padding="4dp"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--        Seek Bar    -->
        <SeekBar
            android:id="@+id/seekbar"
            android:padding="4dp"
            android:progressBackgroundTint="@color/seek_bar"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="lollipop" />

        <!--        Rating Bar  -->
        <RatingBar
            android:id="@+id/ratingbar1"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_margin="5dp"
            android:numStars="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RatingBar
            android:id="@+id/ratingbar2"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RatingBar
            android:id="@+id/ratingbar3"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"/>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            android:importantForAccessibility="no"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="20sp"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/round_background"
            android:layout_marginBottom="60dp"/>

    </LinearLayout>



</ScrollView>
